--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -7,8 +7,8 @@
 <table>
   <thead>
     <tr>
-      <th>Image</th>
-      <th>Dob</th>
+      <th>Image URL</th>
+      <th>DOB</th>
       <th>Name</th>
       <th>Bio</th>
       <th></th>
