--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -11,19 +11,21 @@
       <th>Name</th>
       <th>Bio</th>
       <th>Image</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @directors.each do |director| %>
+    <% @director.each do |director| %>
       <tr>
         <td><img src="<%= director.image_url %>"></td>
         <td><%= director.name %></td>
         <td><%= truncate(director.bio) %></td>
         <td><%= director.dob %></td>
+        <td>
+          <a href="/directors/<%= director.id %>" class="btn btn-primary">Show</a>
+          <a href="/directors/<%= director.id %>/edit" class="btn btn-warning">Edit</a>
+          <a href="/delete_director/<%= director.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+        </td>
 
 
         <td>
