--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -12,7 +12,7 @@
       <dd><%= @director.dob %></dd>
 
       <dt>Bio</dt>
-      <dd><%= @director.bio %></dd>
+      <dd><%= truncate(@director.bio) %></dd>
 
       <dt>Image url</dt>
       <dd>
