--- a/app/views/actors/edit_form.html.erb
+++ b/app/views/actors/edit_form.html.erb
@@ -1,47 +1,64 @@
-<div>
-  <h1>Edit Actor #<%= @actor.id %></h1>
+<!-- Validation failure messages -->
+<% if @actor.errors.any? %>
+  <% @actor.errors.full_messages.each do |message| %>
+    <div class="alert alert-dismissable alert-danger">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= message %>
+    </div>
+  <% end %>
+<% end %>
+
+<div class="page-header">
+  <h3>Edit Actor #<%= @actor.id %></h3>
 </div>
 
-<form action="/update_actor/<%= @actor.id %>">
-    <label for="dob">
-      Dob
-    </label>
-    <div>
-      <input type="text" id="dob" name="dob" placeholder="Dob" value="<%= @actor.dob %>">
-    </div>
-  </div>
+<div class="row">
+  <div class="col-md-12">
+    <form action="/update_actor/<%= @actor.id %>" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-  <div>
-    <label for="name">
-      Name
-    </label>
-    <div >
-      <input type="text" id="name" name="name" placeholder="Name" value="<%= @actor.name %>">
-    </div>
-  </div>
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
 
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @actor.name %>">
+      </div>
 
-  <div>
-    <label for="bio">
-      Bio
-    </label>
-    <div>
-      <textarea id="bio" name="bio" placeholder="Bio" rows="3"><%= @actor.bio %></textarea>
-    </div>
-  </div>
+      <!-- Label and input for dob -->
+      <div class="form-group">
+        <label for="dob" class="control-label">
+          Dob
+        </label>
 
-  <div>
-    <label for="image_url">
-      Image url
-    </label>
-    <div class="col-sm-10">
-      <input type="text" id="image_url" name="image_url" placeholder="Image url" value="<%= @actor.image_url %>">
-    </div>
-  </div>
+        <input type="text" id="dob" name="dob" placeholder="Dob" class="form-control" value="<%= @actor.dob %>">
+      </div>
 
-  <div>
-    <div>
-      <input type="submit" value="Update Actor">
-    </div>
+      <!-- Label and input for bio -->
+      <div class="form-group">
+        <label for="bio" class="control-label">
+          Bio
+        </label>
+
+        <textarea id="bio" name="bio" placeholder="Bio" class="form-control" rows="3"><%= @actor.bio %></textarea>
+      </div>
+
+      <!-- Label and input for image_url -->
+      <div class="form-group">
+        <label for="image_url" class="control-label">
+          Image url
+        </label>
+
+        <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @actor.image_url %>">
+      </div>
+
+      <button class="btn btn-warning">
+        Update Actor
+      </button>
+      or
+      <a href="/actors/<%= @actor.id %>">Cancel</a>
+    </form>
   </div>
-</form>
+</div>
