--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -1,42 +1,34 @@
-<div>
-  <h1>Actors</h1>
+<div class="page-header">
+  <h1>
+    Actors
+    <a href="/actors/new" class="btn btn-lg btn-success">New Actor</a>
+  </h1>
 </div>
 
-<p><a href="/actors/new_form">Add a New Actor</a></p>
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-striped table-hover">
+      <tr>
+        <th>Image url</th>
+        <th>Name</th>
+        <th>Dob</th>
+        <th>Bio</th>
+        <th>Actions</th>
+      </tr>
 
-<table>
-  <thead>
-    <tr>
-      <th>Image URL</th>
-      <th>DOB</th>
-      <th>Name</th>
-      <th>Bio</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @actors.each do |actor| %>
+      <% @actors.each do |actor| %>
       <tr>
         <td><img src="<%= actor.image_url %>"></td>
-        <td><%= actor.dob %></td>
         <td><%= actor.name %></td>
-        <td><%= truncate(actor.bio) %></td>
+        <td><%= actor.dob %></td>
+        <td><%= actor.bio %></td>
         <td>
-          <a href="/actors/<%= actor.id %>">
-          </a>
-        </td>
-        <td>
-          <a href="/actors/<%= actor.id %>/edit_form">
-          </a>
-        </td>
-        <td>
-          <a href="/delete_actor/<%= actor.id %>">
-          </a>
+          <a href="/actors/<%= actor.id %>" class="btn btn-primary">Show</a>
+          <a href="/actors/<%= actor.id %>/edit" class="btn btn-warning">Edit</a>
+          <a href="/delete_actor/<%= actor.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
         </td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <% end %>
+    </table>
+  </div>
+</div>
