--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -1,48 +1,34 @@
-<div>
-  <h1>Directors</h1>
+<div class="page-header">
+  <h1>
+    Directors
+    <a href="/directors/new" class="btn btn-lg btn-success">New Director</a>
+  </h1>
 </div>
 
-<p><a href="/directors/new_form">Add a New Director</a></p>
-
-<table>
-  <thead>
-    <tr>
-      <th>DOB</th>
-      <th>Name</th>
-      <th>Bio</th>
-      <th>Image</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @director.each do |director| %>
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-striped table-hover">
       <tr>
-        <td><img src="<%= director.image_url %>"></td>
+        <th>Image url</th>
+        <th>Name</th>
+        <th>Dob</th>
+        <th>Actions</th>
+      </tr>
+
+      <% @directors.each do |director| %>
+      <tr>
+        <td>
+          <img src="<%= director.image_url %>"
+          </td>
         <td><%= director.name %></td>
-        <td><%= truncate(director.bio) %></td>
         <td><%= director.dob %></td>
         <td>
           <a href="/directors/<%= director.id %>" class="btn btn-primary">Show</a>
           <a href="/directors/<%= director.id %>/edit" class="btn btn-warning">Edit</a>
           <a href="/delete_director/<%= director.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
         </td>
-
-
-        <td>
-          <a href="/directors/<%= director.id %>" >
-            <i class="fa fa-search-plus"></i>
-          </a>
-        </td>
-        <td>
-          <a href="/directors/<%= director.id %>/edit_form">
-            <i class="fa fa-edit"></i>
-          </a>
-        </td>
-        <td>
-          <a href="/delete_director/<%= director.id %>">
-          </a>
-        </td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <% end %>
+    </table>
+  </div>
+</div>
