--- a/app/views/movies/edit_form.html.erb
+++ b/app/views/movies/edit_form.html.erb
@@ -1,64 +1,82 @@
-<div>
-  <h1>Edit Movie #<%= @movie.id %></h1>
+<!-- Validation failure messages -->
+<% if @movie.errors.any? %>
+  <% @movie.errors.full_messages.each do |message| %>
+    <div class="alert alert-dismissable alert-danger">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= message %>
+    </div>
+  <% end %>
+<% end %>
+
+<div class="page-header">
+  <h3>Edit Movie #<%= @movie.id %></h3>
 </div>
 
-<form action="/update_movie/<%= @movie.id %>">
+<div class="row">
+  <div class="col-md-12">
+    <form action="/update_movie/<%= @movie.id %>" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-  <div>
-    <label for="title">
-      Title
-    </label>
-    <div>
-      <input type="text" id="title" name="title" placeholder="Title" value="<%= @movie.title %>">
-    </div>
-  </div>
+      <!-- Label and input for title -->
+      <div class="form-group">
+        <label for="title" class="control-label">
+          Title
+        </label>
 
-  <div>
-    <label for="year">
-      Year
-    </label>
-    <div>
-      <input type="text" id="year" name="year" placeholder="Year" value="<%= @movie.year %>">
-    </div>
-  </div>
+        <input type="text" id="title" name="title" placeholder="Title" class="form-control" value="<%= @movie.title %>">
+      </div>
 
-  <div class="form-group">
-    <label for="duration">
-      Duration
-    </label>
-    <div class="col-sm-10">
-      <input type="text" id="duration" name="duration" placeholder="Duration" value="<%= @movie.duration %>">
-    </div>
-  </div>
+      <!-- Label and input for year -->
+      <div class="form-group">
+        <label for="year" class="control-label">
+          Year
+        </label>
 
-  <div>
-    <label for="description">
-      Description
-    </label>
-    <div>
-      <textarea id="description" name="description" placeholder="Description" rows="3"><%= @movie.description %></textarea>
-    </div>
-  </div>
+        <input type="text" id="year" name="year" placeholder="Year" class="form-control" value="<%= @movie.year %>">
+      </div>
 
-  <div class="form-group">
-    <label for="image_url">
-      Image url
-    </label>
-    <div>
-      <input type="text" id="image_url" name="image_url" placeholder="Image url" value="<%= @movie.image_url %>">
-    </div>
-  </div>
+      <!-- Label and input for duration -->
+      <div class="form-group">
+        <label for="duration" class="control-label">
+          Duration
+        </label>
 
-  <div>
-    <label for="director_id">
-      Director
-    </label>
-    <div>
-      <%= select_tag(:director_id, options_from_collection_for_select(Director.all, :id, :name, @movie.director_id)) %>
-    </div>
-  </div>
+        <input type="text" id="duration" name="duration" placeholder="Duration" class="form-control" value="<%= @movie.duration %>">
+      </div>
 
-  <div>
-      <input type="submit" value="Update Movie">
+      <!-- Label and input for description -->
+      <div class="form-group">
+        <label for="description" class="control-label">
+          Description
+        </label>
+
+        <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"><%= @movie.description %></textarea>
+      </div>
+
+      <!-- Label and input for image_url -->
+      <div class="form-group">
+        <label for="image_url" class="control-label">
+          Image url
+        </label>
+
+        <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @movie.image_url %>">
+      </div>
+
+      <!-- Label and input for director_id -->
+      <div class="form-group">
+        <label for="director_id" class="control-label">
+          Director
+        </label>
+
+            <%= select_tag("director_id", options_from_collection_for_select(Director.all, :id, :name, @movie.director_id), :class => "form-control") %>
+      </div>
+
+      <button class="btn btn-warning">
+        Update Movie
+      </button>
+      or
+      <a href="/movies/<%= @movie.id %>">Cancel</a>
+    </form>
   </div>
-</form>
+</div>
