--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,22 +1,109 @@
 <div class="page-header">
-  <h1>Movie #<%= @movie.id %></h1>
+  <h3>Movie #<%= @movie.id %></h3>
 </div>
 
-<dl class="dl-horizontal">
-  <dt>Title</dt>
-  <dd><%= @movie.title %></dd>
+<div class="row">
+  <div class="col-md-12 mb-2">
+    <dl class="dl-horizontal">
+      <dt>Title</dt>
+      <dd><%= @movie.title %></dd>
 
-  <dt>Year</dt>
-  <dd><%= @movie.year %></dd>
+      <dt>Year</dt>
+      <dd><%= @movie.year %></dd>
 
-  <dt>Duration</dt>
-  <dd><%= @movie.duration %></dd>
+      <dt>Duration</dt>
+      <dd><%= @movie.duration %></dd>
 
-  <dt>Description</dt>
-  <dd><%= @movie.description %></dd>
+      <dt>Description</dt>
+      <dd><%= @movie.description %></dd>
 
-  <dt>Image</dt>
-  <dd><img src="<%= @movie.image_url %>" width="320"></dd>
+      <dt>Image url</dt>
+      <dd>
+        <img src="<%= @movie.image_url %>"
+        </dd>
+
+      <dt>Director</dt>
+      <dd>
+        <a href="/directors/<%= @movie.director_id %>">    
+        <%= Director.find_by(:id => @movie.director_id).name %>
+        </a>  
+      </dd>
+      
+      <dt>Number of characters in the film</dt>
+        <dd>
+          <%= Character.where(:movie_id => @movie.id).count %>
+        </dd>
+    </dl>
+
+    <ul>
+      <% Character.where(:movie_id => @movie.id ).each do |character| %>
+        <li><a href="/characters/<%= character.id %>"><%= character.name %></a></li>
+        <% end %>
+    </ul>
+    
 
 
-</dl>
+    <div class="btn-group btn-group-justified">
+      <a href="/movies" class="btn btn-primary">
+        Back
+      </a>
+      <a href="/movies/<%= @movie.id %>/edit" class="btn btn-warning">
+        Edit
+      </a>
+      <a href="/delete_movie/<%= @movie.id %>" class="btn btn-danger" rel="nofollow">
+        Delete
+      </a>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="row">
+  <div class="col-md-12">
+    <form action="/create_character" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for movie_id -->
+      <div class="form-group">
+        
+
+        
+        <input type="hidden" name="movie_id" value="<%= @movie.id %>">
+      </div>
+
+      <!-- Label and input for actor_id -->
+      <div class="form-group">
+        <label for="actor_id" class="control-label">
+          Actor
+        </label>
+
+        <%= select_tag("actor_id", options_from_collection_for_select(Actor.all, :id, :name, @character.actor_id), :class => "form-control") %>
+        
+      </div>
+
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Character Name" class="form-control">
+      </div>
+      
+      
+      <button class="btn btn-success">
+        Create Character
+      </button>
+      or
+      <a href="/movies/new">Create new movie</a>
+      or
+      <a href="/actors/new">Add a new actor</a>
+      or
+      <a href="/characters">Cancel</a>
+    </form>
+  </div>
+</div>
+
+
